<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="action_settings">Configurações</string>
    <string name="hello_world">Hello World</string>
    <string name="action_refresh">Atualizar</string>
    <string name="title_activity_detail">Detalhes</string>
    <string name="location_map">Visualizar Mapa</string>
    <string name="action_share">Compartilhar</string>
    <string name="HASH_TAG">#GDGJP - Grupo de Desenvolvedores da Google de João Pessoa</string>
    <!-- Strings para Settings -->
    <string name="pref_location_title">Localização</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default"  translatable="false">João Pessoa</string>

    <string name="pref_units_title">Unidade de Temperatura</string>
    <string name="pref_units_key" translatable="false">unidades</string>
    <string name="pref_units_metric_title">Celsius</string>
    <string name="pref_units_imperial_title">Fahreintheins</string>
    <string name="pref_units_metric_value" translatable="false">Celsius</string>
    <string name="pref_units_imperial_value" translatable="false">Fahreintheins</string>

    <string-array name="pref_units_list_titles">
        <item>@string/pref_units_metric_title</item>
        <item>@string/pref_units_imperial_title</item>
    </string-array>
    <string-array name="pref_units_list_values">
        <item>@string/pref_units_metric_value</item>
        <item>@string/pref_units_imperial_value</item>
    </string-array>

</resources>
