<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!--Localização Preferencias-->
    <EditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_title"
        android:defaultValue="@string/pref_location_default"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <!--Preferencias Unidade de Medida-->
    <ListPreference
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_title"
        android:defaultValue="@string/pref_units_metric_value"
        android:entries="@array/pref_units_list_titles"
        android:entryValues="@array/pref_units_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

</PreferenceScreen>